Drop everything vert.x-related
I'll see you in a future project, buddy.